Fixing multiple icons instances

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
             <h4 class="text-center pb-32 hover:text-blue-700 transition-all duration-200 ease-in-out"><a
                     href="mailto:contact_christianr@protonmail.me">contact_christianr@proton.me <i
-                        class="las la-external-link-alt"></a></h4>
+                        class="las la-external-link-alt"></i></a></h4>
 
         </section>
     </div>
