Changing section titles

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <section id="experience" class=" h-screen flex-col items-left justify-left">
 
-                <h3 class="text-center">Experience</h3>
+                <h3 class="text-center">Experience / Jobs</h3>
                 <div class="experience-card">
                     <h4 class="hover:text-blue-700 transition-all duration-200 ease-in-out"><a
                             href="https://hotelesgreenwood.com/" target="_blank">Company: Hoteles Greenwood <i
@@ -234,7 +234,7 @@
 
 
 
-                <h3 class="text-center mt-10 mb-20">Contact Me</h3>
+                <h3 class="text-center mt-10 mb-20">Get in touch with me</h3>
 
 
                 <h4 class="text-center pb-32 hover:text-blue-700 transition-all duration-200 ease-in-out"><a
@@ -257,7 +257,7 @@
 
             <section id="experience" class=" h-screen flex-col items-left justify-left">
 
-                <h3 class="text-center">Experiencia</h3>
+                <h3 class="text-center">Experiencia / Trabajos</h3>
                 <div class="experience-card">
                     <h4 class="hover:text-blue-700 transition-all duration-200 ease-in-out"><a
                             href="https://hotelesgreenwood.com/" target="_blank">Empresa: Hoteles Greenwood <i
@@ -347,7 +347,7 @@
 
 
 
-                <h3 class="text-center mt-10 mb-20">Contacto</h3>
+                <h3 class="text-center mt-10 mb-20">Contácteme</h3>
 
 
                 <h4 class="text-center pb-32 hover:text-blue-700 transition-all duration-200 ease-in-out"><a
