Fixing main subtitle position

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div id="container" class="p-10 items-center">
             <section id="main" class="main h-screen">
                 <h1 class="text-center">Engr. Christian Rodriguez</h1>
-                <h3>Web Developer / Backend / Frontend</h3>
+                <h3 class="text-center">Web Developer / Backend / Frontend</h3>
             </section>
 
 
