Adding job duration time, adding past work card to experience section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                                 class="las la-external-link-alt"></i> </a></h4>
                     <h4>Job position: Freelance</h4>
                     <h4>Location: Durango, Dgo. México</h4>
+                    <h4>Development time: 1 Month</h4>
                     <h4>Technologies: HTML, CSS, JavaScript, Tailwind</h4>
                     <p> I developed and designed an optimised landing page for Greenwood Hotels, located in Coahuila,
                         Mexico. Using the Tailwind CSS framework to achieve a modern, responsive and highly efficient
@@ -172,6 +173,7 @@
                                 class="las la-external-link-alt"></i> </a></h4>
                     <h4>Job position: Freelance</h4>
                     <h4>Location: Durango, Dgo. México</h4>
+                    <h4>Development time: 1 Month</h4>
                     <h4>Technologies: HTML, CSS, JavaScript, Bootstrap</h4>
                     <p>
                         I developed and designed a landing page for Operadora Delta, a company from Durango that
@@ -187,7 +189,8 @@
                                 class="las la-external-link-alt"></i> </a></h4>
                     <h4>Job position: Freelance</h4>
                     <h4>Location: Durango, Dgo. México</h4>
-                    <h4>Technologies: Laravel 11, Blade, PHP, Javascript, MySql</h4>
+                    <h4>Development time: 2 Months</h4>
+                    <h4>Technologies: Laravel 11, Blade, PHP, Javascript, MySQL</h4>
                     <p>
                         I developed and led the entire redesign, layout and restructuring process of the
                         Refacciones Victorino homepage. In addition, I developed a highly interactive content management
@@ -203,7 +206,8 @@
                     <h4>Company: Refacciones Victorino</h4>
                     <h4>Job position: Fullstack</h4>
                     <h4>Location: Durango, Dgo. México</h4>
-                    <h4>Technologies: Laravel 10, Blade, PHP, Javascript, MySql</h4>
+                    <h4>Development time: 1 Year 1 Month</h4>
+                    <h4>Technologies: Laravel 10, Blade, PHP, Javascript, MySQL</h4>
                     <p>
                         I developed an advanced system for automotive parts search, which optimises database queries and
                         significantly reduces search time. In addition, I implemented a functionality for the creation
@@ -212,10 +216,27 @@
                 </div>
 
                 <div class="experience-card">
-                    <h4>Company: Siempre Services</h4>
-                    <h4>position: Fullstack</h4>
+                    <h4>Company: Toltekiani Tattoos</h4>
+                    <h4>Job position: Fullstack</h4>
                     <h4>Location: Remote, Atlanta, GA. USA.</h4>
-                    <h4>Technologies: PHP, ElectronJS, Javascript, MySql</h4>
+                    <h4>Development time: 2 Months</h4>
+                    <h4>Technologies: HTML/CSS, JavaScript, jQuery, Laravel 10, MySQL</h4>
+                    <p>
+                        I led the development of a dynamic advertising system integrated seamlessly with an appointment
+                        management platform for Toltekiani Tattoos. This multifaceted solution was designed to
+                        streamline information flow and offer a suite of versatile scheduling tools. Leveraging PHP
+                        within an MVC architecture, we enhanced functionality with the integration of cutting-edge
+                        design frameworks. This innovative strategy significantly bolstered the company's operational
+                        efficiency and elevated its capacity for information management.
+                    </p>
+                </div>
+
+                <div class="experience-card">
+                    <h4>Company: Siempre Services</h4>
+                    <h4>Job position: Fullstack</h4>
+                    <h4>Location: Remote, Atlanta, GA. USA.</h4>
+                    <h4>Development time: 11 Months</h4>
+                    <h4>Technologies: PHP, ElectronJS, Javascript, MySQL</h4>
                     <p>
                         I designed and implemented an advanced appointment and credential management system for Siempre
                         Services, a leading US company specialising in tax and remittance management. I also assumed
@@ -264,6 +285,7 @@
                                 class="las la-external-link-alt"></i> </a></h4>
                     <h4>Posición: Freelance</h4>
                     <h4>Ubicación: Durango, Dgo. México</h4>
+                    <h4>Duración del desarrollo: 1 Mes</h4>
                     <h4>Tecnológias: HTML, CSS, JavaScript, Tailwind</h4>
                     <p>Desarrollé y diseñé una landing page optimizada para Greenwood Hoteles,
                         ubicados en Coahuila, México. Mediante el uso del framework Tailwind CSS para lograr un diseño
@@ -280,6 +302,7 @@
                                 class="las la-external-link-alt"></i> </a></h4>
                     <h4>Posición: Freelance</h4>
                     <h4>Ubicación: Durango, Dgo. México</h4>
+                    <h4>Duración del desarrollo: 1 Mes</h4>
                     <h4>Tecnológias: HTML, CSS, JavaScript, Bootstrap</h4>
                     <p>Desarrollé y diseñé una landing page para Operadora Delta, una empresa duranguense especializada
                         en
@@ -296,7 +319,8 @@
                                 class="las la-external-link-alt"></i> </a></h4>
                     <h4>Posición: Freelance</h4>
                     <h4>Ubicación: Durango, Dgo. México</h4>
-                    <h4>Tecnológias: Laravel 11, Blade, PHP, Javascript, MySql</h4>
+                    <h4>Duración del desarrollo: 2 Meses</h4>
+                    <h4>Tecnológias: Laravel 11, Blade, PHP, Javascript, MySQL</h4>
                     <p>Desempeñé un papel clave en la dirección del proceso completo de rediseño, maquetación y
                         reestructuración de la página de inicio de Refacciones Victorino. Además, desarrollé un sistema
                         de
@@ -315,7 +339,8 @@
                     <h4>Empresa: Refacciones Victorino</h4>
                     <h4>Posición: Fullstack</h4>
                     <h4>Ubicación: Durango, Dgo. México</h4>
-                    <h4>Tecnológias: Laravel 10, Blade, PHP, Javascript, MySql</h4>
+                    <h4>Duración del desarrollo: 1 Año 1 mes</h4>
+                    <h4>Tecnológias: Laravel 10, Blade, PHP, Javascript, MySQL</h4>
                     <p>Desarrollé un sistema avanzado para la búsqueda de piezas automotrices, que optimiza las
                         consultas a
                         bases de datos y reduce significativamente el tiempo de búsqueda. Además, implementé una
@@ -325,10 +350,26 @@
                 </div>
 
                 <div class="experience-card">
+                    <h4>Empresa: Toltekiani Tattoos</h4>
+                    <h4>Posición: Fullstack</h4>
+                    <h4>Ubicación: Remoto, Atlanta, GA. USA.</h4>
+                    <h4>Duración del desarrollo: 2 Meses</h4>
+                    <h4>Tecnológias: HTML/CSS, JavaScript, jQuery, Laravel 10, MySQL</h4>
+                    <p>Dirigí el desarrollo de un sistema dinámico de publicidad integrado a la perfección con una
+                        plataforma de gestión de citas para Toltekiani Tattoos. Esta solución multifacética fue diseñada
+                        para agilizar el flujo de información y ofrecer un conjunto de herramientas de programación
+                        versátiles. Aprovechando PHP dentro de una arquitectura MVC, mejoramos la funcionalidad con la
+                        integración de marcos de diseño de vanguardia. Esta estrategia innovadora reforzó
+                        significativamente la eficacia operativa de la empresa y elevó su capacidad de gestión de la
+                        información.</p>
+                </div>
+
+                <div class="experience-card">
                     <h4>Empresa: Siempre Services</h4>
                     <h4>Posición: Fullstack</h4>
                     <h4>Ubicación: Remoto, Atlanta, GA. USA.</h4>
-                    <h4>Tecnológias: PHP, ElectronJS, Javascript, MySql</h4>
+                    <h4>Duración del desarrollo: 11 Meses</h4>
+                    <h4>Tecnológias: PHP, ElectronJS, Javascript, MySQL</h4>
                     <p>Diseñé e implementé de un sistema avanzado de gestión de citas y credenciales para Siempre
                         Services,
                         una destacada empresa estadounidense especializada en la gestión de impuestos y remesas. También
